# mnemosyne-mcp

./: .gitignore  Dockerfile  LICENSE  MCP_TESTING.md  OPTIMIZATION_SUMMARY.md  PHASE1_RESULTS.md  PHASE2_RESULTS.md  README.md  benchmark_results.json  benchmark_stream.ndjson  pyproject.toml  pytest.ini
.claude/skills/sparql/: SKILL.md
.github/workflows/: publish-mcp-image.yml
docs/: MCP_ADEQUACY_REPORT.md  SWITCHING-CONTEXTS.md  mcp-benchmark-spec.ttl  quickstart.md  user-guide.md
docs/dev-notes/: 2024-12-07-session-summary.md
playground/: README.md  editor.html  mcp_script.py  server.py  start.sh  test_mcp.py
scripts/: bench_dev.sh  bench_mcp.py  check_scores.py  cleanup_orphan_wires.py  inspect_workspace_timestamps.py  smoke_query_blocks.py  test_incremental_updates.py
src/neem/: __init__.py  cli.py
src/neem/hocuspocus/: __init__.py  client.py  document.py  protocol.py  workspace.py
src/neem/hocuspocus/converters/: __init__.py  inline_tags.py  inline_valuations.py  markdown_to_xml.py  xml_to_html.py  xml_to_markdown.py
src/neem/mcp/: __init__.py  auth.py  errors.py  http_client.py  progress.py  query_blocks.py  response_objects.py  session.py  trace.py
src/neem/mcp/jobs/: __init__.py  (+2 more)
src/neem/utils/: claude_config.py  deployment_context.py  errors.py  logging.py  oauth.py  token_storage.py
tests/: __init__.py  test_backend_config.py  test_block_operations.py  test_calendar_event_block.py  test_chatgpt_account_readonly_profile.py  test_chatgpt_demo_profile.py  test_claude_config.py  test_comment_anchoring.py  test_document_xml_serialization.py  test_edit_block_text.py  test_edit_block_text_matching.py  test_edit_block_text_tolerance.py  test_hocuspocus_client_auth.py  test_hocuspocus_timestamp_normalize.py  test_hocuspocus_workspace_freshness.py  test_home_graph_persistence.py  test_id_normalize.py  test_inline_tag_expirations.py  test_inline_tags.py  test_inline_valuations.py  test_job_race.py  test_jobs_models.py  test_markdown_to_xml.py  test_mcp_auth.py  test_mcp_auth_context.py  test_oauth.py  test_p1_quick_wins.py  test_parse_tag_list_with_expirations.py  test_query_blocks.py  test_realtime_jobs.py  test_scheduled_atom_xml_builders.py  test_search_post_filter.py  test_standalone_server_http.py  test_structured_logger_kwargs.py  test_sync_tag_chips_to_block.py  test_tag_page_doc_id.py  test_token_storage.py  test_tool_argument_validation.py  test_tool_argument_validation_hints.py  test_workspace_ensure_daily_note.py  (+4 more)
(+20 files in other folders)
